# FlakyBuild

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  ConfigFile.cpp  ConfigFile.hpp  Dataset.cpp  Detector.cpp  Detector.hpp  Geometry.cpp  Geometry.hpp  Makefile  README.md  Result.hpp  nsa.cpp  nsa.rb
.github/workflows/: Debug.yml  Release.yml  clang-tidy.yml  cmake.yml  valgrind.yml
data/: cortex.conf  cortex_testing.csv  cortex_training.csv  dataset.conf  dataset_testing.csv  dataset_trainning.csv
src/: ConfigFile.cpp  ConfigFile.hpp  Dataset.cpp  Dataset.hpp  Datatype.hpp  Debug.hpp  Detector.cpp  Detector.hpp  Geometry.hpp  Nsa.cpp  Nsa.hpp  SearchSpace.cpp  SearchSpace.hpp  main.cpp  nsa.cpp  nsa.rb
